<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11521.1" systemVersion="16A319" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11517.1"/>
        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="HelveticaNeue.ttc">
            <string>HelveticaNeue</string>
            <string>HelveticaNeue-Bold</string>
        </array>
    </customFonts>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BitLive" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" alpha="0.94999999999999996" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bitcoin_large" translatesAutoresizingMaskIntoConstraints="NO" id="IRk-sS-QNy">
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="RYR-SG-he0"/>
                                    <constraint firstAttribute="width" secondItem="IRk-sS-QNy" secondAttribute="height" multiplier="1:1" id="gR1-hv-bDP"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$ 000.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H8H-84-Dqo" customClass="LTMorphingLabel" customModule="LTMorphingLabel">
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="50"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$ 0.00 (0.00%)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yri-Xc-w0g">
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="kjW-SC-GiQ">
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="Lma-wD-WLe"/>
                                    <constraint firstAttribute="width" constant="150" id="t86-rd-evE"/>
                                </constraints>
                                <segments>
                                    <segment title="USD"/>
                                    <segment title="GBP"/>
                                    <segment title="EUR"/>
                                </segments>
                                <connections>
                                    <action selector="currencySegmentedControl:" destination="BYZ-38-t0r" eventType="valueChanged" id="XsN-Xb-ihf"/>
                                </connections>
                            </segmentedControl>
                            <view contentMode="scaleToFill" restorationIdentifier="LineChartView" translatesAutoresizingMaskIntoConstraints="NO" id="OSt-Zj-h2n" customClass="LineChartView" customModule="Charts">
                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                            </view>
                        </subviews>
                        <color key="backgroundColor" red="0.96078431610000004" green="0.75294119120000003" blue="0.094117648900000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="OSt-Zj-h2n" secondAttribute="bottom" id="8dN-lB-WrD"/>
                            <constraint firstItem="yri-Xc-w0g" firstAttribute="top" secondItem="H8H-84-Dqo" secondAttribute="bottom" constant="5" id="DB3-UX-H9y"/>
                            <constraint firstItem="yri-Xc-w0g" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MeW-32-NiN"/>
                            <constraint firstAttribute="trailing" secondItem="OSt-Zj-h2n" secondAttribute="trailing" id="O7D-Ix-6Nd"/>
                            <constraint firstItem="H8H-84-Dqo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="S7t-vq-D67"/>
                            <constraint firstItem="kjW-SC-GiQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cmA-MO-gaj"/>
                            <constraint firstItem="IRk-sS-QNy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="e0t-Y0-KAA"/>
                            <constraint firstItem="OSt-Zj-h2n" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="kw1-Xh-RoL"/>
                            <constraint firstItem="kjW-SC-GiQ" firstAttribute="top" secondItem="yri-Xc-w0g" secondAttribute="bottom" constant="45" id="lsG-rM-ja8"/>
                            <constraint firstItem="H8H-84-Dqo" firstAttribute="top" secondItem="IRk-sS-QNy" secondAttribute="bottom" constant="25" id="mjC-It-7vd"/>
                            <constraint firstItem="OSt-Zj-h2n" firstAttribute="top" secondItem="kjW-SC-GiQ" secondAttribute="bottom" constant="25" id="sTt-lr-czf"/>
                            <constraint firstItem="IRk-sS-QNy" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="25" id="wtC-7s-SUl"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="bitcoinChangeLabel" destination="yri-Xc-w0g" id="dM2-OD-GTt"/>
                        <outlet property="bitcoinChartView" destination="OSt-Zj-h2n" id="aLs-Wi-mMt"/>
                        <outlet property="bitcoinValueLabel" destination="H8H-84-Dqo" id="vqP-bK-kRb"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
    <resources>
        <image name="bitcoin_large" width="150" height="150"/>
    </resources>
    <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
</document>
